Verbeteringen aan de requirements tekst

--- a/Hoofdstukken/requirements.tex
+++ b/Hoofdstukken/requirements.tex
@@ -1,13 +1,12 @@
 \chapter{Requirements} \label{hoofdstuk:requirements}
-Canvas.hs dient te voldoen aan verschillende requirements. Initieel is een lijst met requirements opgesteld. Gedurende het ontwikkelproces zijn onder meer op basis van feedback van de opdrachtgever nieuwe requirements aan de orde gekomen. In dit hoofdstuk worden zowel oorspronkelijke als toegevoegde requirements opgenoemd en toegelicht.
+Canvas.hs dient te voldoen aan verschillende requirements. Initieel is een lijst met requirements opgesteld; die deels zijn voortgekomen uit functionaliteit van de oude, op Gloss gebaseerde, grafische omgeving. Gedurende het ontwikkelproces zijn onder meer op basis van feedback van de opdrachtgever nieuwe requirements aan de orde gekomen. In dit hoofdstuk worden zowel oorspronkelijke als toegevoegde requirements opgenoemd en toegelicht.
 
-In het kort dient de library te bestaan uit een browseromgeving die door middel van HTML en JavaScript een gebruikersinterface toont. Op deze gebruikersinterface moeten verschillende standaard figuren te tekenen zijn. En met de gebruikersinterface dient geinteracteerd te kunnen worden middels standaard invoer als toetsenbord en muis. Via een verbinding tussen de browseromgeving en het Haskell-programma kan er vanuit het Haskell-programma output gegenereerd worden in de browser en kunnen er events verstuurd worden vanuit de browseromgeving naar het Haskell-programma.
+In het kort dient de library te bestaan uit een browseromgeving die door middel van HTML en JavaScript een gebruikersinterface toont. Op deze gebruikersinterface moeten verschillende standaard figuren te tekenen zijn. En met de gebruikersinterface dient geinteracteerd te kunnen worden middels standaard invoer als toetsenbord en muis. Via een verbinding tussen de browseromgeving en de library kan er vanuit een Haskell-programma output gegenereerd worden in de browser en kunnen er events verstuurd worden vanuit de browseromgeving naar een Haskell-programma. Het deel van de library dat de verbinding met de browseromgeving opzet en onderhoudt wordt vanaf nu de \emph{module} genoemd. De module zal volledig geschreven zijn in Haskell.
 
 De requirements zijn opgesteld met de MoSCoW-methode. Bij deze methode kunnen essenti\"ele, niet-essenti\"ele en uitgesloten requirements vastgesteld worden. Aan het eind van het project kan dan beter beoordeeld worden of alle essenti\"ele functionaliteit ge\"implementeerd is. Er wordt gebruik gemaakt van ``dient'' voor essenti\"ele requirements, ``kan eventueel'' voor niet-essentiele requirements en ``zal niet'' voor uitgesloten requirements. In de traceability matrix in \autoref{sec:traceability} wordt het eindproduct beoordeeld op basis van de requirements.
 
-\todo{Iets meer uitleggen over waarom requirements nodig zijn (bijv. t.b.v. gebruikerservaring of zat ook in Gloss-oplossing)}
 \subsubsection{Functionele requirements}
-\paragraph{Basisfunctionaliteit} In de basis zal Canvas.hs dezelfde functionaliteit moeten ondersteunen als de oude practicumomgeving die gebruik maakt van de Gloss library, zodat de programmeur met de library minstens even veel kan weergeven in zijn interface. Om extra mogelijkheden te bieden dient de library ook animaties mogelijk te maken.
+\paragraph{Basisfunctionaliteit} In de basis zal Canvas.hs dezelfde functionaliteit ondersteunen als de oude practicumomgeving die gebruik maakt van de Gloss library. De programmeur zou met deze library minstens even veel moeten kunnen weergeven. Om extra mogelijkheden te bieden dient de library ook animaties mogelijk te maken.
 
 \newcounter{startvalue}
 \begin{enumerate}[label={R\arabic*}]
@@ -45,7 +44,7 @@ De requirements zijn opgesteld met de MoSCoW-methode. Bij deze methode kunnen es
 	\setcounter{startvalue}{\value{enumi}}
 \end{enumerate}
 
-\paragraph{Acties} In de oude practicumomgeving worden een aantal acties ondersteund die buiten de grafische output om werken. Deze acties bieden complexe functionaliteit versimpeld aan de gebruiker aan, waaronder een tekstinvoerpop-up, en de mogelijkheid om bestanden te verwerken. Hierdoor hoeft de gebruiker zelf geen I/O te gebruiken in Haskell wat het instapniveau van de gebruiker vergemakkelijkt. Om Canvas.hs breder inzetbaar te maken dient het als extra functionaliteit ook fullscreen weergegeven te kunnen worden. Dit is bijvoorbeeld handig in een presentatie.
+\paragraph{Acties} In de oude practicumomgeving worden een aantal \emph{acties} ondersteund die buiten de grafische output om werken. Acties worden gedefineerd als: vanuit de module aangeroepen gebeurtenissen. Deze acties bieden complexe functionaliteit versimpeld aan de gebruiker aan. Hierbij kan gedacht worden aan: het openen van een tekstinvoerpop-up en de mogelijkheid om bestanden te verwerken. Door het gebruik van acties hoeft de gebruiker zelf geen I/O te gebruiken in zijn Haskell programma. Dit verlaagt het instapniveau om aan de gang te gaan met Haskell en een grafische omgeving. Om Canvas.hs breder inzetbaar te maken dient het als extra functionaliteit ook fullscreen weergegeven te kunnen worden. Dit is bijvoorbeeld handig in een presentatie.
 
 \begin{enumerate}[label={R\arabic*}]
 \setcounter{enumi}{\value{startvalue}}
