--- a/Hoofdstukken/requirements.tex
+++ b/Hoofdstukken/requirements.tex
@@ -79,7 +79,7 @@ De requirements zijn opgesteld met de MoSCoW-methode. Bij deze methode kunnen es
 \end{enumerate}
 
 \subsubsection{Niet functionele requirements}
-Een van de problemen met de oude practicumomgeving is dat het niet goed werkt op alle systemen. Hier moet Canvas.hs verandering in brengen. Door gebruik te maken van HTML standaarden zal de library een goede basis hebben om platform onafhankelijk te werken. Om er voor te zorgen dat de library goed werkt en te onderhouden blijft dient het te voldoen aan een aantal kwaliteitseisen.
+Operating systemen incompatibility was een ander probleem met de oude practicumomgeving. Hier moet Canvas.hs verandering in brengen. Door gebruik te maken van HTML standaarden zal de library een goede basis hebben om platform onafhankelijk te werken. Om er voor te zorgen dat de library goed werkt en te onderhouden blijft dient het te voldoen aan een aantal kwaliteitseisen.
 
 \begin{enumerate}[label={R\arabic*}]
 \setcounter{enumi}{\value{startvalue}}
