Verbeteringen aan het ontwerp hoofdstuk

--- a/Hoofdstukken/inleiding.tex
+++ b/Hoofdstukken/inleiding.tex
@@ -7,7 +7,7 @@ Om de focus binnen Functioneel Programmeren op de essentie te houden, is een gra
 \subsubsection{Canvas.hs}
 Het resultaat van dit ontwerpproject is \emph{Canvas.hs}; een omgeving die Haskell-gebruikers in staat stelt op eenvoudige wijze grafische elementen op een HTML5 canvas te presenteren. Canvas.hs is ontwikkeld met het oog op gebruiksgemak en eenvoud zonder de mogelijkheid tot uitbreiding en het toevoegen van geavanceerde functionaliteit onnodig te beperken.
 
-\emph{Canvas.hs} is als library te installeren via \emph{Cabal}, de package manager voor Haskell programma's. In \fullref{sec:gebruikershandleiding} kan gelezen worden hoe de library gebruikt kan worden. Indien de libaray door een Haskell programma wordt aangeroepen zal een zeer lichte \emph{HTTP} en \emph{Websocket} server opgestart worden. Waarna de library een browser zal opstarten. Deze browser laad de \emph{JavaScript} code van de library in en toont vervolgens een \emph{HTML5 canvas} waar op getekend kan worden door het Haskell programma dat gebruik maakt van Canvas.hs. In \autoref{hoofdstuk:ontwerp} wordt het ontwerp van Canvas.hs beschreven.
+\emph{Canvas.hs} is als library te installeren via \emph{Cabal}, de package manager voor Haskell programma's. In \fullref{sec:gebruikershandleiding} kan gelezen worden hoe de library gebruikt kan worden. Als een Haskell programma, via de aangeboden \emph{API}, de library aanroept zal een zeer lichte \emph{HTTP} en \emph{Websocket} server opgestart worden. Waarna de library een browser zal opstarten. Deze browser laad de \emph{JavaScript} code van de library in en toont vervolgens een \emph{HTML5 canvas} waar op getekend kan worden door het Haskell programma dat gebruik maakt van Canvas.hs. In \autoref{hoofdstuk:ontwerp} wordt het ontwerp van Canvas.hs beschreven.
 
 De ontwikkelde library is uitgebreid getest. Dit geldt zowel voor de geschreven Haskell code als de JavaScript code. In \autoref{hoofdstuk:resultaten} kan hier meer over gelezen worden.
 
