--- a/Hoofdstukken/ontwerp.tex
+++ b/Hoofdstukken/ontwerp.tex
@@ -1,4 +1,14 @@
 \chapter{Ontwerp} \label{hoofdstuk:ontwerp}
+Het ontwerp van de library wordt beschreven in dit hoofdstuk. Dit zal gebeuren in twee delen. Ten eerste zal in \fullref{sec:globaal} de werking van Canvas.hs globaal beschreven worden. 
+Ten tweede zal het ontwerp de library in detail toegelicht worden in \fullref{sec:detail}. In deze sectie zal ook de keuzes voor verschillende \emph{externe libraries} uiteengezet worden. Externe libraries zijn de libraries waar Canvas.hs afhankelijk van is. Dit zijn dan ook zogenaamde \emph{dependencies}. 
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[keepaspectratio,width=\textwidth]{./images/demo.png}
+\caption{Een demonstratie applicatie die gebruik maakt van de Canvas.hs library}
+\label{fig:demo_screenshot}
+\end{center}
+\end{figure}
 
 \input{./Hoofdstukken/ontwerp/globaal.tex}
 \input{./Hoofdstukken/ontwerp/detail.tex}
