Author names in a reference fixed

--- a/references.bib
+++ b/references.bib
@@ -24,7 +24,7 @@ year = {2008}
 	note = {RFC4627}
 }
 @misc{Protocol2013,
-	author = {L. J. Buit, J. van Doorn, P. T. Jager, M. J. Roo and M. J. Scheepers},
+	author = {L. J. Buit and J. van Doorn and P. T. Jager and M. J. Roo and M. J. Scheepers},
 	title = "Canvas.Hs Protocol"
 	year = "2013",
 	url = "http://canvashs.github.io/protocol.html"
