Reference error and spelling mistakes fixed

--- a/Hoofdstukken/evaluatie/planning.tex
+++ b/Hoofdstukken/evaluatie/planning.tex
@@ -1,2 +1,4 @@
+% !TEX spellcheck = nl_NL
 \section{Planning}
 \todo{Planning schrijven}
+De planning tijdens dit project verliep volgens het scrum model zoals beschreven in \autoref{sec:scrum}. Dit model is flexibel en dynamisch waardoor 
