--- a/references.bib
+++ b/references.bib
@@ -25,8 +25,8 @@ year = {2008}
 }
 @misc{Protocol2013,
 	author = {L. J. Buit and J. van Doorn and P. T. Jager and M. J. Roo and M. J. Scheepers},
-	title = "Canvas.Hs Protocol"
+	title = "Canvas.Hs Protocol",
 	year = "2013",
-	url = "http://canvashs.github.io/protocol.html"
+	url = "http://canvashs.github.io/protocol.html",
 	urldate = {13 jan 2014}
 }
