--- a/references.bib
+++ b/references.bib
@@ -10,7 +10,7 @@
       title = "A successful Git branching model",
       month = "februari",
       year = "2010",
-      howpublished = {\url{http://nvie.com/posts/a-successful-git-branching-model},
+      howpublished = {\url{http://nvie.com/posts/a-successful-git-branching-model}}
 }
 @misc{JSON2006,
 	author = {D. Crockford},
@@ -27,5 +27,5 @@
 	title = "Canvas.Hs Protocol",
 	month = "december",
 	year = "2013",
-	howpublished = {\url{http://canvashs.github.io/protocol.html}},
+	howpublished = {\url{http://canvashs.github.io/protocol.html}}
 }
