--- a/Hoofdstukken/ontwerp.tex
+++ b/Hoofdstukken/ontwerp.tex
@@ -2,6 +2,8 @@
 Het ontwerp van de library wordt beschreven in dit hoofdstuk. Dit zal gebeuren in twee delen. Ten eerste zal in \fullref{sec:globaal} de werking van Canvas.hs globaal beschreven worden. 
 Ten tweede zal het ontwerp de library in detail toegelicht worden in \fullref{sec:detail}. In deze sectie zal ook de keuzes voor verschillende \emph{externe libraries} uiteengezet worden. Externe libraries zijn de libraries waar Canvas.hs afhankelijk van is. Dit zijn dan ook zogenaamde \emph{dependencies}. 
 
+ \autoref{fig:demo_screenshot} geeft een voorbeeld van de interface van een demonstratie applicatie van Canvas.hs weer. De interface die hier getoond wordt is volledig getekend in een HTML5 Canvas.
+
 \begin{figure}[H]
 \begin{center}
 \includegraphics[keepaspectratio,width=\textwidth]{./images/demo.png}
