--- a/Hoofdstukken/evaluatie/organisatie.tex
+++ b/Hoofdstukken/evaluatie/organisatie.tex
@@ -1,5 +1,5 @@
 \section{Organisatie}
-De samenwerking is goed verlopen. Daarbij was de duidelijke structuur van zowel het project– als de technische organisatie een belangrijk onderdeel. Deze structuur is eerder beschreven in \fullref{hoofdstuk:organisatie}. Er kon met deze structuur, naar gevoel van de projectgroep, efficiënt gewerkt worden. Er werd wekelijks twee of meer keer samengekomen om te werken aan het project.
+De samenwerking is goed verlopen. Daarbij was de duidelijke structuur van zowel het project- als de technische organisatie een belangrijk onderdeel. Deze structuur is eerder beschreven in \fullref{hoofdstuk:organisatie}. Er kon met deze structuur, naar gevoel van de projectgroep, efficiënt gewerkt worden. Er werd wekelijks twee of meer keer samengekomen om te werken aan het project.
 
 \paragraph{Besprekingen} Elke samenkomst is er een kortdurende scrumbespreking gehouden. Bij de dagelijkse besprekingen werd vaak op details in gegaan, hierbij werden ontwerp beslissingen vaak genomen tijdens deze besprekingen. De besprekingen duurde hierdoor soms wat lang en werden zittend gehouden. Met zogenaamde \emph{stand-up meetings} zou dit voorkomen konden worden. Bij deze besprekingen staat iedereen en zit niemand voor zijn/haar computer. Hiermee konden de dagelijkse besprekingen wellicht wat vlotter verlopen.
 
@@ -12,4 +12,4 @@ Er is nu gewerkt in een projectgroep zonder direct uren budget, mocht dit het ge
 \paragraph{Pull requests}
 Bij aanvang van het project werken met een branching model en pull requests voor veel teamleden nieuw. Daarom is deze aanpak in de eerste fases niet altijd juist toegepast. Naarmate het project vorderde is steeds vaker met succes gebruik gemaakt van het branchingmodel en pull requests. Dit zorgde er voor dat teamleden elkaars code controleerde en dat er minder bugs zaten in de versies op de \inlinecode{dev} branch.
 
-\paragraph{Continuous Integration} Naast het compileren, testen en genereren van documentatie zou het buildscript ook automatisch per versie de test coverage uit kunnen rekenen. Dit zou ontwikkelaars nog meer inzicht kunnen geven in de kwaliteit van de software en hoe deze voor– of achteruit gaat per versie.
+\paragraph{Continuous Integration} Naast het compileren, testen en genereren van documentatie zou het buildscript ook automatisch per versie de test coverage uit kunnen rekenen. Dit zou ontwikkelaars nog meer inzicht kunnen geven in de kwaliteit van de software en hoe deze voor- of achteruit gaat per versie.
