--- a/Hoofdstukken/ontwerp/detail/externelibraries.tex
+++ b/Hoofdstukken/ontwerp/detail/externelibraries.tex
@@ -1,21 +1,15 @@
 \subsection{Externe libraries}
 \label{subsec:externe_libraries}
+\todo{blabla libraie sgebruikt mege leuk}
 
-\subsubsection{Webserver}
-Om de statische files van onze library te serveren hebben we een HTTP-server nodig, we hebben hier gekozen voor ``warp''. Warp biedt een lichtgewicht webserver die goed gedocumenteerd en ondersteund is. Andere opties waren ``happstack'', ``hyena'' en ``snap server"". Dit zijn eigenlijk volledige webframeworks, wij hoefden slechts statische files te serveren. Voor de eenvoud en onderhoudbaarheid was ``warp'' de beste keuze.
+\subsubsection{HTTP-server}
+Bij het starten van een applicatie met Canvas.hs wordt automatisch een browserscherm met daarop het canvas geopend. Deze pagina wordt samen met de benodigde javascript bestanden aan de browser geserveerd als statische content. Om deze content te kunnen serveren is een HTTP-server nodig. In Canvas.hs hebben we gekozen voor de ``warp'' module. De voornaamste redenen hiervoor zijn dat Warp lichtgewicht, goed gedocumenteerd en eenvoudig in gebruik is. Andere alternatieven zijn ``hapstack'', ``hyeana'' en ``snap server''. Deze bieden allen veel meer dan alleen de mogelijkheid om via HTTP bestanden te serveren en waren daardoor te veel en te ingewikkeld voor Canvas.hs
 
-\subsubsection{Websocketserver}
-De websocketserver is degene die connecties tussen de Haskell en Javascript onderhoudt, we hebben hier gekozen voor de ``websockets'' library. Er had gekozen kunnen worden om hieromheen de ``wai'' wrapper te gebruiken, maar omdat we weinig gebruik maken van andere functionaliteit van ``wai'' hebben we het bij de normale library gehouden.
-
-Binnen de websockets zijn er verschillende protocollen gedefineerd, welke in verschillende browsers geimplementeerd zijn. De meest recente versie van het websockets protocol poogt een standaard te worden (RFC6455) en de websockets library heeft daar tijdens ons ontwerpproject support voor gekregen. De meeste recente browsers hebben RFC-6455 geimplementeerd, en de verwachting is dat deze versie van het protocol lange tijd ondersteund wordt.
+\subsubsection{Websockets}
+In Canvas.hs wordt het resultaat van de user applicatie naar de javascript applicatie gestuurd via een webscoket. In Canvas.hs wordt gebruik gemaakt van de ``websockets'' module. Deze module is goed gedocumenteerd en wordt door de auteur goed onderhouden.
 
 \subsubsection{JSON}
-Binnen ons protocol gebruiken we JSON. In eerste instantie wilden we hiervoor een eigen parser schrijven, we waren namelijk sceptisch over het gebruik van een library omdat het parsen van JSON niet moeilijk lijkt omdat de libraries ingewikkeld leken. Uiteindelijk hebben we toch een library genomen, libraries vertrouwde stukken code zijn waarvan al geverifieerd is dat ze werken, daartoe bespaart het ons veel tijd en hebben we een solide basis van onze code.
+Voor het encoderen en decoderen van en naar JSON wordt in de Canvas.hs module de ``Aeson'' gebruikt. Hiermee is het relatief eenvoudig om datastructuren in Haskell om te encoderen naar JSON en vice-versa. Er is voor Aeson gekozen omdat deze goed gedocumenteerd is. Een alternatief voor Aeson was ``Text.JSON'', deze is niet gebruikt, omdat deze gebrekkig gedocumenteerd is.
 
-Er zijn voor haskell twee bekende JSON libraries, Text.JSON en Aeson. In eerste instantie hebben we gekeken naar Text.JSON maar al snel bleek dat deze library slecht gedocumenteerd is. Daarna hebben we naar Aeson gekeken, Aeson is beter gedocumenteerd en biedt eenzelfde workflow.
-Binnen Aeson is er gekozen om Template Haskell functies te gebruiken, dit is een GHC extensie die een soort van metaprogramming toevoegd aan Haskell. Template Haskell is gebruikt om lege keys uit de \todo{robert: gaan jullie hier nog meer over vertellen?}JSON te verwijderen en een record probleem van Haskell te omzeilen.
-
-\subsubsection{Tests}
-Als testingframework hebben we voor Hspec gekozen. Hspec integreert goed met andere testframeworks zoals QuickCheck en HUnit maar daarbovenop voegt het verhalende syntax toe aan de testcases. Ook zoekt Hspec automatisch naar testcases, en paralleliseert het testcode.
-
-Binnen Hspec maken we ook gebruik van QuickCheck, deze library kan arbitraire testcases testen. Hiervoor dient de input gedefineerd te worden en dan zal QuickCheck een groot aantal testcases loslaten op de code. Vaak gebruiken we eerst een voorgedefineerde testcase (van HSpec zelf, wat weer een wrapper om HUnit is), en daarnaast een arbitrair aantal extra testcases gegenereerd door QuickCheck. Zo weten we dat het geen toeval was dat onze tests checkte en kunnen we zonder al te veel moeite veel gevallen proberen.
+\todo{Hier toevoegen over jQuery}
+\todo{Hier toevoegen over Kinetic.js}
