--- a/Hoofdstukken/resultaten/testplan.tex
+++ b/Hoofdstukken/resultaten/testplan.tex
@@ -11,6 +11,8 @@ Gedurende het gehele ontwikkelingstraject moeten tests ontwikkeld worden. Voor e
 
 Door deze manier van werken is altijd de development branch goed getest en is het altijd mogelijk om een nieuwe release uit te brengen met de op dat moment volledig geteste features. Iedere release wordt in de master branch uitgebracht.
 
+\todo{staat die hele branchingstrategie niet in hoofdstuk 2, hier alleen even kort herhalen?}
+
 \subsection{Cabal}
 De buildconfiguratie en testconfiguraties worden in de cabal file bijgehouden. Met het commando cabal test kunnen alle tests van het project uitgevoerd worden. Op de website van Canvas.hs staan uitgebreide instructies over het uitvoeren van tests.
 
@@ -23,4 +25,6 @@ Iedere ontwikkelaar zal gedurende de ontwikkeling zijn\todo{anders formuleren ge
 Aan de client side wordt gewerkt met JavaScript, het Jasmine test framework wordt gebruikt om de tests te ontwikkelen. Door middel van PhantomJS kunnen de tests vanaf de command line worden uitgevoerd zonder browser. Hierdoor kunnen de tests ook op de build server uitgevoerd worden. Verder zal er gebruik gemaakt worden van de imagediff library om de daadwerkelijk getekende output te testen. Voor het meten van code coverage in JavaScript wordt gebruik gemaakt van Blanket.js.
 
 \subsection{Haskell}
-De server en de module worden ontwikkeld met Haskell. Het Hspec test framework wordt gebruikt om deze onderdelen te testen. Voor het meten van de code coverage in Haskell wordt gebruik gemaakt hpc.
+De Haskellcode in Canvas.hs wordt getest met behulp van ``Hspec''. Hier is voor gekozen omdat Hspec relatief eenvoudig werkt en goed integreert met Cabal. Hierbij kan Hspec automatisch de verschillende tests in een map ontdekken en uitvoeren.
+
+In samenwerking met Hspec wordt QuickCheck gebruikt. Dit veel gebruikte testframework maakt het mogelijk om een groot aantal willekeurige testcases uit te voeren. Dit geeft extra zekerheid over de geteste code aangezien er naast de bekende edge cases, waarvoor tests in Hspec zijn geschreven, ook een groot aantal willekeurige cases wordt getest.
