Planning evaluation written

--- a/Hoofdstukken/evaluatie/planning.tex
+++ b/Hoofdstukken/evaluatie/planning.tex
@@ -1,4 +1,9 @@
 % !TEX spellcheck = nl_NL
 \section{Planning}
-\todo{Planning schrijven}
-De planning tijdens dit project verliep volgens het scrum model zoals beschreven in \autoref{sec:scrum}. Dit model is flexibel en dynamisch waardoor 
+De planning tijdens dit project verliep volgens het scrum model zoals beschreven in \autoref{sec:scrum}. Dit model is flexibel en dynamisch waardoor een onhaalbare planning snel gecorrigeerd kon worden. 
+
+Door per tweewekelijkse sprint te plannen, hoopten we elke sprint een haalbare planning te kunnen maken die vervolgens daadwerkelijk uitgevoerd zou worden. Het belangrijkste probleem met het gebruiken van sprints binnen ons project werd veroorzaakt door de wisselende beschikbaarheid van de teamleden en, in sommige gevallen, de product owner. Het inschatten van de werkdruk van een bepaalde taak is op zichzelf een moeilijke opgave en een per sprint wisselende beschikbaarheid van de teamleden door vakantie- en tentamenweken en de fluctuerende werkdruk van andere vakken maakt het maken van een geschikte sprint planning vrijwel ondoenlijk.
+
+Doordat de werkdruk in een sprint soms lager uitviel dan verwacht, zijn in sommige sprints aanvullende taken vanuit de project backlog naar de sprint backlog verplaatst. Daar tegenover staan sommige sprints waarin taken overbleven op de sprint backlog die overgenomen werden naar de volgende sprint.
+
+Later in het project is overgegaan naar een losser model waarbij de scrum master strak toezicht hield op welke taken de teamleden elke week zouden voltooien. .
