--- a/Hoofdstukken/organisatie.tex
+++ b/Hoofdstukken/organisatie.tex
@@ -31,11 +31,14 @@ Taken worden bijgehouden in de zogenaamde \emph{backlogs}. Er is een \emph{backl
 \end{center}
 \end{figure}
 
-De lijst van ontwikkeltaken werd bijgehouden op het \emph{GitHub} platform—hierover meer in \fullref{sec:technische_organisatie}. Deze ontwikkeltaken werden daar ook wel \emph{issues} genoemd. Ontwikkeltaken en andere taken werd gezamenlijk bijgehouden op \emph{Trello}. Met deze applicatie kan een online takenbord gemaakt worden. De taken werden in de applicatie verdeeld over de verschillende backlogs. In \autoref{fig:trello} is te zien welke status een taak heeft aan de kolom waar deze in staat. Door het gebruik van Trello hebben alle betrokkenen een goed inzicht in de taken die nog openstaan en reeds zijn uitgevoerd.
+De lijst van ontwikkeltaken werd bijgehouden op het \emph{GitHub} platform—hierover meer in \fullref{sec:technische_organisatie}. Deze ontwikkeltaken werden daar ook wel \emph{issues} genoemd. Ontwikkeltaken en andere taken werd gezamenlijk bijgehouden op \emph{Trello}. Met deze applicatie kan een online takenbord gemaakt worden. De taken werden in de applicatie verdeeld over de verschillende backlogs. In \autoref{fig:trello} is te zien welke status een taak heeft aan de kolom waar deze in staat. De status van een taak kan zijn dat deze in de Backlog, in de Sprint Backlog, op In progress, op Done of op Done final staat. Onder het kopje \emph{Planning} hierna wordt besproken wat deze statussen inhouden. Door het gebruik van Trello hebben alle betrokkenen een goed inzicht in de taken die nog openstaan en reeds zijn uitgevoerd.
 
-\subsubsection{Besprekingen}
-Er zijn twee typen besprekingen die regelmatig gehouden worden. Ten eerste wordt elke samenkomst de \emph{Scrum bespreking} gehouden. Tijdens deze bespreking vertelt ieder teamlid kort wat hij/zij sinds de vorige bespreking gedaan heeft en of er problemen waren. Daarna verteldt het teamlid waar hij/zij na de bespreking mee bezig gaat. Het is hier de bedoeling dat ieder teamlid een concreet kortetermijn doel stelt.
-Ten tweede wordt er bij aanvang van een nieuwe fase een planning gemaakt op basis van de taken in het \emph{project backlog}. De prioriteit per taak wordt aangegeven door de \emph{product owner}, in ons geval de opdrachgever. De teamleden bepalen vervolgens tijdens de bespreking hoeveel van deze taken uitgevoerd kunnen worden en verplaatsen deze naar het \emph{spring backlog}. 
+\subsubsection{Planning}
+Bij scrum wordt gebruikt gemaakt van sprints. Dit zijn korte termijnen van --in ons geval-- twee weken waarbinnen een aantal features toegevoegd worden aan het bestaande systeem. Voorafgaand aan elke sprint wordt bepaald welke features in de komende sprint geïmplementeerd zullen worden. Als er tijdens een sprint ontdekt wordt dat bepaalde taken nog uitgevoerd moeten worden, dan worden deze op de backlog gezet voor volgende sprints.
+
+Bij aanvang van een nieuwe fase wordt een planning gemaakt op basis van de taken in het \emph{project backlog}. De prioriteit per taak wordt aangegeven door de \emph{product owner}, in ons geval de opdrachtgever. De teamleden bepalen vervolgens tijdens de sprintbespreking hoeveel van deze taken uitgevoerd kunnen worden en verplaatsen deze naar het \emph{sprint backlog}. 
+
+Elke samenkomst wordt een \emph{Scrum bespreking} gehouden. Tijdens deze bespreking vertelt ieder teamlid kort wat hij/zij sinds de vorige bespreking gedaan heeft en of er problemen waren. Daarna vertelt het teamlid waar hij/zij na de bespreking mee bezig gaat. Het is hier de bedoeling dat ieder teamlid een concreet kortetermijn doel stelt. Door deze updates kan de scrum master bijhouden of de planning van de huidige sprint haalbaar is of dat er ingegrepen moet worden.
 
 \section{Technische organisatie} \label{sec:technische_organisatie}
 Bij het bouwen van software met een groep is het belangrijk dat elke ontwikkelaar zich kan concentreren op de feature die hij/zij aan het ontwikkelen is. Idealiter hoeft er geen rekening gehouden te worden met andere features die door anderen ontwikkeld worden. Er is dan ook gekozen om gebruik te maken van het gedistribueerde versiebeheer systeem \emph{Git} met een centraal repository op \emph{GitHub}.
